modified site, still needs work

--- a/open-react-template/src/assets/scss/core/base/_helpers.scss
+++ b/open-react-template/src/assets/scss/core/base/_helpers.scss
@@ -64,11 +64,11 @@
 }
 
 .text-color-primary {
-	color: color(primary);
+	color: WHITE;
 }
 
 .text-color-secondary {
-	color: color(secondary);
+	color: white;
 }
 
 .text-color-error {
