--- a/open-react-template/src/assets/scss/core/base/_typography.scss
+++ b/open-react-template/src/assets/scss/core/base/_typography.scss
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6,
 	@include font-family(heading);
 	@include font-weight(heading);
 	clear: both;
-	color: color(heading);
+	color: darkRed;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 }
