--- a/open-react-template/src/assets/scss/settings/base/_typography.scss
+++ b/open-react-template/src/assets/scss/settings/base/_typography.scss
@@ -6,7 +6,7 @@ $font--import:      'Inter:400,500,600,700,800';
 // The font set
 $font--family: (
 	heading: 	null,
-	base:		'"Inter", sans-serif',
+	base:		'"Oxygen", sans-serif',
 	code: 		'Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace',
 	pre: 		'"Courier 10 Pitch", Courier, monospace'
 );
